--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div><h1 id="title">Mama's Dairy Farm Business</h1></div>
-        <img src="assets/images/download60.jpeg" alt="cash_cow image">
+        <!-- <div> <img src="assets/images/download60.jpeg" alt="cash_cow image" width="300px" height="60px"></div> -->
     </header>
 
     <section id="section">
