--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
     
         
     </section>
+    <footer id="footer">
+        <h2>&copy 2022</h2>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
