--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
     <header class="header">
+        <div><i class="w3-jumbo w3-spin w3-brown fa fa-home"></i></div>
         <div><h1 id="title">Mama's Dairy Farm Business</h1></div>
-        <!-- <div> <img src="assets/images/download60.jpeg" alt="cash_cow image" width="300px" height="60px"></div> -->
+        <div><i class="w3-jumbo w3-brown fa fa-bars"></i></div>
     </header>
 
     <section id="section">
 
 
         <div class="milkProduce">
-    
+           <div><i class="fa-solid fa-house"></i></div>
             <!-- form to input values -->
             
             <div class="formData">
