It wiill add social media icons at the bottom of footer.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <script src="https://kit.fontawesome.com/457a315592.js" crossorigin="anonymous">
+    </script>
 </head>
 <body>
     <header class="header">
-        <div><i class="w3-jumbo w3-spin w3-brown fa fa-home"></i></div>
+        <div class="icon"><i class="w3-jumbo w3-spin w3-brown fa fa-home"></i></div>
         <div><h1 id="title">Mama's Dairy Farm Business</h1></div>
-        <div><i class="w3-jumbo w3-brown fa fa-bars"></i></div>
+        <div class="icon"><i class="w3-jumbo w3-brown fa fa-bars"></i></div>
     </header>
 
     <section id="section">
@@ -67,6 +69,26 @@
         
     </section>
     <footer id="footer">
+        <div class="container">
+            <a class="link linkedin">
+                <i class="fab fa-2x fa-linkedin"></i>
+            </a>
+            <a class="link twitter">
+                <i class="fab fa-2x fa-twitter"></i>
+            </a>
+            <a class="link github">
+                <i class="fab fa-2x fa-github"></i>
+            </a>
+            <a class="link instagram">
+                <i class="fab fa-2x fa-instagram"></i>
+            </a>
+            <a class="link youtube">
+                <i class="fab fa-2x fa-youtube"></i>
+            </a>
+            <a class="link facebook">
+                <i class="fab fa-2x fa-facebook-f"></i>
+            </a>
+        </div>
         <h2>&copy 2022</h2>
     </footer>
     <script src="index.js"></script>
