It will edit the h3.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <!-- OUTPUT RESULTS -->
             
             <div class="outputDisplay">
-                <h3 id="displayTitle">Production Summary</h3>
+                <h3 id="displayTitle">Projected Production values</h3>
                 <hr>
                 <p id="outputData"></p>
     
