--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <script src="https://kit.fontawesome.com/457a315592.js" crossorigin="anonymous">
-    </script>
 </head>
 <body>
     <header class="header">
@@ -28,7 +26,7 @@
             <div class="formData">
                 
                 <form action="submit" onsubmit="produceReport();">
-                    <h3>Fill and submit the form bellow to get a summary of your income</h3> 
+                    <h3>Enter And Submit Values Of Milk In Litres</h3> 
                     <div id="sheds">
                         <label for="shed_A">Shed_A: Milk (Litres)</label>
                         <input id="shed_A" type="number" min="0" required>
