It will add link the home icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="icon"><i class="w3-jumbo w3-spin w3-brown fa fa-home"></i></div>
+        <div class="icon"><a href="https://ferdinandmukodo.github.io/verbose-guacamole/"><i class="w3-jumbo w3-spin w3-brown fa fa-home"></i></a></div>
         <div><h1 id="title">Mama's Dairy Farm Business</h1></div>
         <div class="icon"><i class="w3-jumbo w3-brown fa fa-bars"></i></div>
     </header>
